--- a/app/src/main/res/layout/activity_browser_main.xml
+++ b/app/src/main/res/layout/activity_browser_main.xml
@@ -133,6 +133,30 @@
 
 
                     <TextView
+                        android:id="@+id/left_drawer_action"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:gravity="center"
+                        android:onClick="onClick"
+                        android:text="@string/tabs"
+                        android:textColor="@color/gray_lighter"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/right_drawer_action"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:gravity="center"
+                        android:onClick="onClick"
+                        android:text="@string/browser_bookmark"
+                        android:textColor="@color/gray_lighter"
+                        android:textSize="16sp" />
+
+                    <TextView
                         android:id="@+id/fullscreen_action"
                         android:layout_width="wrap_content"
 
