--- a/app/src/main/res/layout/bookmark_drawer.xml
+++ b/app/src/main/res/layout/bookmark_drawer.xml
@@ -24,7 +24,7 @@
             android:layout_marginRight="15dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:src="?attr/starDrawable"></ImageView>
+            android:src="?attr/starDrawable" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,7 +35,7 @@
             android:gravity="center_vertical"
             android:maxLines="1"
             android:minHeight="?android:attr/listPreferredItemHeight"
-            android:text="@string/action_bookmarks"
+            android:text="@string/bookmark"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <Button
